# build-with-llms

./: README.md  app_pdf_profile.py  email_evaluations.csv  evals.ipynb  evals_pdf_profile.ipynb  hw1.py  main.py  pdf_qa_logs.db  pdf_qa_logs3.db  pdf_qa_logs4.db  pdf_qa_logs6.db  pdf_qa_logs7.db  pdf_qa_logs_hw1b.db  pyproject.toml  requirements.txt
.github/workflows/: test.yml
evals/: README.md  eval_interface.py  evals_pdf_profile.ipynb  test_answer.json
src/: app_pdf_profile.py  logging_setup.py  modal_datasette.py  modal_wrapper.py
test/: README.md  logic.py  pdf_qa_logs.db  test_app_pdf_profile.py
test/data/: hbaLI.txt  stefanLI.txt
