[project]
name = "build-with-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.58.2",
    "datasette>=0.65.1",
    "dotenv>=0.9.9",
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "gradio>=5.38.0",
    "ipywidgets>=8.0.0",
    "jupyter>=1.1.1",
    "llama-index-core>=0.12.50",
    "llama-index-embeddings-openai>=0.3.1",
    "llama-index-llms-anthropic>=0.7.6",
    "llama-index-llms-gemini>=0.5.0",
    "llama-index-llms-openai>=0.4.7",
    "matplotlib>=3.10.3",
    "modal>=1.1.0",
    "openai>=1.97.0",
    "pandas>=2.3.1",
    "pymupdf>=1.26.3",
    "pytest>=8.4.1",
    "python-dotenv>=0.9.9",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "streamlit>=1.47.0",
]
